added hover effects

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -167,7 +167,7 @@
                             <section class="subtask-display">
                                 <ul id="subtask_render" class="subtask-render-section">
                                     <li class="subtask-list-element">
-                                        <button class="subtask-button">
+                                        <button class="subtask-button" role="button">
                                             <section class="subtask-text">
                                                 <p>•</p>
                                                 <span>Test Subtask</span>
