added edit and delete image

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -172,8 +172,10 @@
                                                 <p>•</p>
                                                 <span>Test Subtask</span>
                                             </section>
-                                            <section>
-
+                                            <section class="subtask-edit-section">
+                                                <img src="../assets/icons/board/edit_button.svg" alt="edit button">
+                                                <div></div>
+                                                <img src="../assets/icons/board/delete_button.svg" alt="delete button">
                                             </section>
                                         </button>
                                     </li>
