created edit subtask template

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -179,6 +179,22 @@
                                             </section>
                                         </button>
                                     </li>
+
+                                    <li>
+                                        <div>
+                                            <article class="subtask-edit">
+                                                <input type="text">
+                                                <section class="subtask-edit-buttons">
+                                                    <img src="../assets/icons/board/delete_button.svg" alt="delete button">
+                                                    <div></div>
+                                                    <img src="../assets/icons/board/edit_button.svg" alt="edit button">
+                                                </section>
+                                            </article>
+                                            <aside>
+
+                                            </aside>
+                                        </div>
+                                    </li>
                                 </ul>
                             </section>
                         </form>
