added seperator for edit buttons

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -174,7 +174,7 @@
                                             </section>
                                             <section class="subtask-edit-section">
                                                 <img src="../assets/icons/board/edit_button.svg" alt="edit button">
-                                                <div></div>
+                                                <div class="subtask-edit-seperator"></div>
                                                 <img src="../assets/icons/board/delete_button.svg" alt="delete button">
                                             </section>
                                         </button>
@@ -186,7 +186,7 @@
                                                 <input type="text">
                                                 <section class="subtask-edit-buttons">
                                                     <img src="../assets/icons/board/delete_button.svg" alt="delete button">
-                                                    <div></div>
+                                                    <div class="subtask-edit-seperator"></div>
                                                     <img src="../assets/icons/board/edit_button.svg" alt="edit button">
                                                 </section>
                                             </article>
