added blue underline to subtask edit

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -190,7 +190,7 @@
                                                     <img src="../assets/icons/board/edit_button.svg" alt="edit button">
                                                 </section>
                                             </article>
-                                            <aside>
+                                            <aside class="subtask-underline-blue">
 
                                             </aside>
                                         </div>
