fix: added dot burger menu to svgs for later use - implemented mainframe responsiv css in contact html

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../style/contacts.css">
     <link rel="stylesheet" href="../style/add_contact.css">
     <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/mainframe_responsive.css">
 
     <script src="/script.js"></script>
     <script src="/scripts/firebase.js"></script>
