--- a/html/contacts.html
+++ b/html/contacts.html
@@ -19,7 +19,8 @@
     <script src="/script.js"></script>
     <script src="/scripts/firebase.js"></script>
     <script src="/scripts/contact_data.js"></script>
-    <script src="/scripts/contact_template.js"></script>
+    <script src="/scripts/contact_template.js"></script>^
+    <script src="../scripts/board_overlay.js"></script>
 
 
 </head>
