fix: removed empty div container in html
feat: started responsiv structure

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -19,7 +19,7 @@
     <script src="/script.js"></script>
     <script src="/scripts/firebase.js"></script>
     <script src="/scripts/contact_data.js"></script>
-    <script src="/scripts/contact_template.js"></script>^
+    <script src="/scripts/contact_template.js"></script>
     <script src="../scripts/board_overlay.js"></script>
 
 
@@ -72,12 +72,9 @@
         </header>
         <main class="contact-main">
             <aside class="sidebar-contacts">
-                <div>
-                    <button onclick="openDialog('addContact' , 'addContent')" class="button_add_task add-contact-btn">
-                        <p>Add new contact</p>
+                    <button onclick="openDialog('addContact' , 'addContent')" class="button_add_task add-contact-btn">Add new contact
                         <img src="../assets/icons/contacts/person_add.svg" alt="add_person icon">
                     </button>
-                </div>
                 <div class="contact-list" id="contactList">
                 </div>
             </aside>
