--- a/html/board.html
+++ b/html/board.html
@@ -112,6 +112,7 @@
     <script src="../scripts/board_templates.js"></script>
     <script src="../scripts/board.js"></script>
     <script src="../scripts/drag_and_drop_handler.js"></script>
+    <script src="../scripts/subtasks_overlay.js"></script>
     <script src="../scripts/board_overlay.js"></script>
     <script src="../scripts/firebase.js"></script>
 </body>
