--- a/html/board.html
+++ b/html/board.html
@@ -113,7 +113,8 @@
     <script src="../scripts/board.js"></script>
     <script src="../scripts/drag_and_drop_handler.js"></script>
     <script src="../scripts/subtasks_overlay.js"></script>
-    <script src="../scripts/board_overlay.js"></script>
+    <script src="../scripts/edit_and_add_task_overlay.js"></script>
+    <script src="../scripts/board_overlay_data.js"></script>
     <script src="../scripts/firebase.js"></script>
 </body>
 
