--- a/html/contacts.html
+++ b/html/contacts.html
@@ -20,7 +20,7 @@
     <script src="/scripts/firebase.js"></script>
     <script src="/scripts/contact_data.js"></script>
     <script src="/scripts/contact_template.js"></script>
-    <script src="../scripts/board_overlay.js"></script>
+    <script src="../scripts/board_overlay_data.js"></script>
 
 
 </head>
