feat: added contacts responsiv css file

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../style/add_contact.css">
     <link rel="stylesheet" href="../style/add_task.css">
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
+    <link rel="stylesheet" href="../style/contact_responsive.css">
 
     <script src="/script.js"></script>
     <script src="/scripts/firebase.js"></script>
@@ -72,7 +73,7 @@
         </header>
         <main class="contact-main">
             <aside class="sidebar-contacts">
-                    <button onclick="openDialog('addContact' , 'addContent')" class="button_add_task add-contact-btn">Add new contact
+                    <button onclick="openDialog('addContact' , 'addContent')" class="add-contact-btn">Add new contact
                         <img src="../assets/icons/contacts/person_add.svg" alt="add_person icon">
                     </button>
                 <div class="contact-list" id="contactList">
