feat: added css to make the contact list responsiv

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -74,7 +74,7 @@
         <main class="contact-main">
             <aside class="sidebar-contacts">
                     <button onclick="openDialog('addContact' , 'addContent')" class="add-contact-btn">Add new contact
-                        <img src="../assets/icons/contacts/person_add.svg" alt="add_person icon">
+                        <img class="add-contact-btn-img" src="../assets/icons/contacts/person_add.svg" alt="add_person icon">
                     </button>
                 <div class="contact-list" id="contactList">
                 </div>
