--- a/html/board.html
+++ b/html/board.html
@@ -64,7 +64,7 @@
                 <h1>Board</h1>
                 <div class="board_controls">
                     <div class="search_task">
-                        <input type="text" placeholder="Find Task" id="find_task">
+                        <input type="text" placeholder="Find Task" id="task_filter_input_field" onfocus="this.value=''">
                         <button>
                             <img src="../assets/icons/board/search_glas.svg" alt="">
                         </button>
