create invalid nosearchresult overlay

--- a/html/board.html
+++ b/html/board.html
@@ -104,6 +104,9 @@
                 <div class="column_content" id="awaitFeedbackColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
                 <div class="column_content" id="doneColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>                    
             </section>
+            <dialog id="responseDialog" class="dialog-message">
+                <div class="white font-size-20" id="responseMessage">Contact succesfully created</div>
+            </dialog>
         </main>
     </article>
 
