--- a/html/board.html
+++ b/html/board.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Board</title>
     <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/add_contact.css">
     <link rel="stylesheet" href="../style/board_style.css">
     <link rel="stylesheet" href="../style/board_overlay_style.css">
     <link rel="stylesheet" href="../style/standard.css">
@@ -105,7 +106,7 @@
                 <div class="column_content" id="doneColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>                    
             </section>
             <dialog id="responseDialog" class="dialog-message">
-                <div class="white font-size-20" id="responseMessage">Contact succesfully created</div>
+                <div class="white font-size-20" id="responseMessage"></div>
             </dialog>
         </main>
     </article>
