--- a/html/board.html
+++ b/html/board.html
@@ -115,6 +115,7 @@
     <script src="../scripts/add_task_templates.js"></script>
     <script src="../scripts/board_templates.js"></script>
     <script src="../scripts/board.js"></script>
+    <script src="../scripts/search_board.js"></script>
     <script src="../scripts/drag_and_drop_handler.js"></script>
     <script src="../scripts/subtasks_overlay.js"></script>
     <script src="../scripts/edit_and_add_task_overlay.js"></script>
