--- a/html/board.html
+++ b/html/board.html
@@ -105,7 +105,7 @@
                 <div class="column_content" id="awaitFeedbackColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
                 <div class="column_content" id="doneColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>                    
             </section>
-            <dialog id="responseDialog" class="dialog-message">
+            <dialog id="responseDialog" class="dialog-message hide_overflow">
                 <div class="white font-size-20" id="responseMessage"></div>
             </dialog>
         </main>
