update info message overflow

--- a/html/board.html
+++ b/html/board.html
@@ -105,9 +105,9 @@
                 <div class="column_content" id="awaitFeedbackColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
                 <div class="column_content" id="doneColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>                    
             </section>
-            <dialog id="responseDialog" class="dialog-message hide_overflow">
+            <div id="responseDialog" class="message_overflow">
                 <div class="white font-size-20" id="responseMessage"></div>
-            </dialog>
+            </div>
         </main>
     </article>
 
