--- a/html/contacts.html
+++ b/html/contacts.html
@@ -78,6 +78,7 @@
                         <img class="add-contact-btn-img" src="../assets/icons/contacts/person_add.svg"
                             alt="add_person icon">
                     </button>
+                </div>
                 <div class="contact-list" id="contactList">
                 </div>
             </aside>
