update message toggle overlay function

--- a/html/board.html
+++ b/html/board.html
@@ -105,8 +105,10 @@
                 <div class="column_content" id="awaitFeedbackColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>
                 <div class="column_content" id="doneColumn" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)"></div>                    
             </section>
-            <div id="responseDialog" class="message_overflow">
-                <div class="white font-size-20" id="responseMessage"></div>
+            <div id="message_overflow_background" class="overlay">
+                <div id="responseDialog" class="message_overflow">
+                    <div class="white font-size-20" id="responseMessage"></div>
+                </div>
             </div>
         </main>
     </article>
