--- a/html/board.html
+++ b/html/board.html
@@ -43,7 +43,7 @@
             <a href="../html/legalNotice.html">Legal notice</a>
         </footer>
     </aside>
-    <article>
+    <article class="article-bg">
         <header class="header">
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
@@ -65,7 +65,7 @@
                 <h1>Board</h1>
                 <div class="board_controls">
                     <div class="search_task">
-                        <input type="text" placeholder="Find Task" id="task_filter_input_field" onfocus="this.value=''">
+                        <input type="text" placeholder="Find Task" id="task_filter_input_field">
                         <button>
                             <img src="../assets/icons/board/search_glas.svg" alt="">
                         </button>
