fix: bug after rebase

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -19,8 +19,8 @@
 
     <script src="/script.js"></script>
     <script src="/scripts/firebase.js"></script>
-    <script src="/scripts/contacts/contact_data.js"></script>
-    <script src="/scripts//contacts/contact_template.js"></script>
+    <script src="../scripts/contacts/contact_data.js"></script>
+    <script src="../scripts/contacts/contact_template.js"></script>
     <script src="../scripts/board_overlay_data.js"></script>
 
 
@@ -107,7 +107,7 @@
             </dialog>
         </main>
     </article>
-    <script src="/scripts/contacts/contacts.js"></script>
+    <script src="../scripts/contacts/contacts.js"></script>
 
 </body>
 
