feat: started implementing structure for incoming dialogs

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -74,7 +74,7 @@
         <main class="contact-main">
             <aside id="contactsAsideElement" class="sidebar-contacts">
                 <div class="add-contact-btn-position">
-                    <button onclick="openDialog('dialogWindow' , 'addContent')" class="add-contact-btn">Add new contact
+                    <button onclick="directionOfIncomingDialog('dialogWindow' , 'addContent')" class="add-contact-btn">Add new contact
                         <img class="add-contact-btn-img" src="../assets/icons/contacts/person_add.svg"
                             alt="add_person icon">
                     </button>
