--- a/html/board.html
+++ b/html/board.html
@@ -114,6 +114,7 @@
     </article>
 
     <script src="../scripts/add_task.js"></script>
+    <script src="../scripts/contact_data.js"></script>
     <script src="../scripts/add_task_templates.js"></script>
     <script src="../scripts/board_templates.js"></script>
     <script src="../scripts/board.js"></script>
@@ -123,6 +124,7 @@
     <script src="../scripts/edit_and_add_task_overlay.js"></script>
     <script src="../scripts/board_overlay_data.js"></script>
     <script src="../scripts/firebase.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 
