--- a/html/help.html
+++ b/html/help.html
@@ -1,41 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help</title>
+    <title>Page Template</title>
+    <link rel="stylesheet" href="../style/standard.css">
+    <link rel="stylesheet" href="../style/mainframe.css">
+    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 </head>
-<body>
-    <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.
-What is Join?
-Join is a kanban-based project management tool designed and built by a group of dedicated students as part of their web development bootcamp at the Developer Akademie.
 
-Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban to help users manage their tasks and projects in an intuitive, visual interface.
+<body class="body">
+    <aside class="sidebar">
+        <div class="sidebar_upper_section">
+            <section class="logo-section">
+                <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
+            </section>
+            <nav class="sidebar-nav">
+                <a href="#" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
+                    <p>Summary</p>
+                </a>
+                <a href="../html/add_task.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
+                    <p>Add Task</p>
+                </a>
+                <a href="../html/board.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
+                    <p>Board</p>
+                </a>
+                <a href="../html/contacts.html" class="sidebar-nav-section">
+                    <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
+                    <p>Contacts</p>
+                </a>
 
-It is important to note that Join is designed as an educational exercise and is not intended for extensive business usage. While we strive to ensure the best possible user experience, we cannot guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding Join.
-How to use it
-Here is a step-by-step guide on how to use Join:
-1.
-Exploring the Board
-When you log in to Join, you'll find a default board. This board represents your project and contains four default lists: "To Do", "In Progress", “Await feedback” and "Done".
-2.
-Creating Contacts
-In Join, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in the required information. Once added, these contacts can be assigned tasks and they can interact with the tasks on the board.
-3.
-Adding Cards
-Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. Click the "+" button under the appropriate list to create a new card. Fill in the task details in the card, like task name, description, due date, assignees, etc.
-4.
-Moving Cards
-As the task moves from one stage to another, you can reflect that on the board by dragging and dropping the card from one list to another.
-5.
-Deleting Cards
-Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a card will permanently remove it from the board. Please exercise caution when deleting cards, as this action is irreversible.
+            </nav>
+        </div>
+        <footer class="sidebar-footer">
+            <a href="../html/privacy_policy.html">Privacy Policy</a>
+            <a href="../html/legal_notice.html">Legal notice</a>
+        </footer>
+    </aside>
+    <article>
+        <header class="header">
+            <nav class="header-nav">
+                <p>Kanban Project Management Tool</p>
+                <section class="header-side-buttons">
+                    <a href="#">
+                        <img src="../assets/icons/header/help.svg" alt="help icon">
+                    </a>
+                    <a href="#">
+                        <img src="../assets/icons/header/user_placeholder.svg" alt="user icon">
+                    </a>
+                </section>
+            </nav>
+        </header>
+        <main class="main-content">
+            <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll
+                provide an overview of what Join is, how it can benefit you, and how to use it.
+                What is Join?
+                Join is a kanban-based project management tool designed and built by a group of dedicated students as
+                part of their web development bootcamp at the Developer Akademie.
 
-Remember that using Join effectively requires consistent updates from you and your team to ensure the board reflects the current state of your project.
+                Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
+                work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban to help
+                users manage their tasks and projects in an intuitive, visual interface.
 
-Have more questions about Join? Feel free to contact us at [Your Contact Email]. We're here to help you!
+                It is important to note that Join is designed as an educational exercise and is not intended for
+                extensive business usage. While we strive to ensure the best possible user experience, we cannot
+                guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding Join.
+                How to use it
+                Here is a step-by-step guide on how to use Join:
+                1.
+                Exploring the Board
+                When you log in to Join, you'll find a default board. This board represents your project and contains
+                four default lists: "To Do", "In Progress", “Await feedback” and "Done".
+                2.
+                Creating Contacts
+                In Join, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on
+                "New contact", and fill in the required information. Once added, these contacts can be assigned tasks
+                and they can interact with the tasks on the board.
+                3.
+                Adding Cards
+                Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. Click
+                the "+" button under the appropriate list to create a new card. Fill in the task details in the card,
+                like task name, description, due date, assignees, etc.
+                4.
+                Moving Cards
+                As the task moves from one stage to another, you can reflect that on the board by dragging and dropping
+                the card from one list to another.
+                5.
+                Deleting Cards
+                Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a card will
+                permanently remove it from the board. Please exercise caution when deleting cards, as this action is
+                irreversible.
 
-Enjoy using Join!
-</p>
+                Remember that using Join effectively requires consistent updates from you and your team to ensure the
+                board reflects the current state of your project.
+
+                Have more questions about Join? Feel free to contact us at [Your Contact Email]. We're here to help you!
+
+                Enjoy using Join!
+            </p>
+        </main>
+    </article>
 </body>
+
 </html>
