feat: added h1 element

--- a/html/help.html
+++ b/html/help.html
@@ -56,6 +56,7 @@
             </nav>
         </header>
         <main class="main-content">
+            <h1>Help</h1>
             <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll
                 provide an overview of what Join is, how it can benefit you, and how to use it.
                 What is Join?
