--- a/html/help.html
+++ b/html/help.html
@@ -4,10 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Template</title>
+    <title>Contacts</title>
+    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/mainframe.css">
-    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+    <link rel="stylesheet" href="../style/board_style.css">
+    <link rel="stylesheet" href="../style/board_overlay_style.css">
+    <link rel="stylesheet" href="../style/contacts/contacts.css">
+    <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/mainframe_responsive.css">
+    <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
+
+
+
+
 </head>
 
 <body class="body">
@@ -21,15 +32,15 @@
                     <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                     <p>Summary</p>
                 </a>
-                <a href="../html/add_task.html" class="sidebar-nav-section">
+                <a href="/html/add_task.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                     <p>Add Task</p>
                 </a>
-                <a href="../html/board.html" class="sidebar-nav-section">
+                <a href="/html/board.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
-                <a href="../html/contacts.html" class="sidebar-nav-section">
+                <a href="/html/contacts.html" class="sidebar-nav-section active">
                     <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
@@ -37,8 +48,8 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="../html/privacy_policy.html">Privacy Policy</a>
-            <a href="../html/legal_notice.html">Legal notice</a>
+            <a href="../privacyPolicy.html">Privacy Policy</a>
+            <a href="../legalNotice.html">Legal notice</a>
         </footer>
     </aside>
     <article>
@@ -46,7 +57,7 @@
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a href="#">
+                    <a href="../html/help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <a href="#">
@@ -55,56 +66,94 @@
                 </section>
             </nav>
         </header>
-        <main class="main-content">
-            <h1>Help</h1>
-            <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll
-                provide an overview of what Join is, how it can benefit you, and how to use it.
-                What is Join?
-                Join is a kanban-based project management tool designed and built by a group of dedicated students as
-                part of their web development bootcamp at the Developer Akademie.
+        <main class="contact-main">
+            <section id="contactsMainElement" class="contact-display">
+                <div>
+                    <h1>Help</h1>
+                    <button></button>
+                </div>
+                <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here,
+                    we'll provide an overview of what Join is, how it can benefit you, and how to use it.</p>
+                <h2>
+                    What is Join?
+                </h2>
+                <p>Join is a kanban-based project management tool designed and built by a group of dedicated students
+                    as part of their web development bootcamp at the Developer Akademie. <br>
+                    Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
+                    work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban to help
+                    users manage their tasks and projects in an intuitive, visual interface. <br>
+                    It is important to note that Join is designed as an educational exercise and is not intended for
+                    extensive business usage. While we strive to ensure the best possible user experience, we cannot
+                    guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding
+                    Join.
+                </p>
+                <h2>How to use it</h2>
+                <span>Here is a step-by-step guide on how to use Join:</span>
+                <ol>
+                    <li>
+                        <h3>
+                            Exploring the Board
+                        </h3>
+                        <span>
+                            When you log in to Join, you'll find a default board. This board represents your project and
+                            contains four default lists: "To Do", "In Progress", “Await feedback” and "Done".
+                        </span>
+                    </li>
+                    <li>
+                        <h3>
+                            Creating Contacts
+                        </h3>
+                        <span>
+                            In Join, you can add contacts to collaborate on your projects. Go to the "Contacts" section,
+                            click on "New contact", and fill in the required information. Once added, these contacts can
+                            be
+                            assigned tasks and they can interact with the tasks on the board.
+                        </span>
+                    </li>
+                    <li>
+                        <h3>
+                            Adding Cards
+                        </h3>
+                        <span>
+                            Now that you've added your contacts, you can start adding cards. Cards represent individual
+                            tasks. Click the "+" button under the appropriate list to create a new card. Fill in the
+                            task details in
+                            the card, like task name, description, due date, assignees, etc.
+                        </span>
+                    </li>
+                    <li>
+                        <h3>
+                            Moving Cards
+                        </h3>
+                        <span>
+                            As the task moves from one stage to another, you can reflect that on the board by dragging
+                            and dropping the card from one list to another.
+                        </span>
+                    </li>
+                    <li>
+                        <h3>
+                            Deleting Cards
+                        </h3>
+                        <span>
+                            Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a
+                            card will permanently remove it from the board. Please exercise caution when deleting cards,
+                            as this
+                            action is irreversible.
+                        </span>
+                    </li>
+                    <p> Remember that using Join effectively requires consistent updates from you and your team to
+                        ensure the board reflects the current state of your project.
+                        Have more questions about Join? Feel free to contact us at [Your Contact Email]. We're here to help
+                        you!
+                    </p>
+                </ol>
+                <h2>Enjoy using Join!</h2>
+            </section>
 
-                Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
-                work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban to help
-                users manage their tasks and projects in an intuitive, visual interface.
-
-                It is important to note that Join is designed as an educational exercise and is not intended for
-                extensive business usage. While we strive to ensure the best possible user experience, we cannot
-                guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding Join.
-                How to use it
-                Here is a step-by-step guide on how to use Join:
-                1.
-                Exploring the Board
-                When you log in to Join, you'll find a default board. This board represents your project and contains
-                four default lists: "To Do", "In Progress", “Await feedback” and "Done".
-                2.
-                Creating Contacts
-                In Join, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on
-                "New contact", and fill in the required information. Once added, these contacts can be assigned tasks
-                and they can interact with the tasks on the board.
-                3.
-                Adding Cards
-                Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. Click
-                the "+" button under the appropriate list to create a new card. Fill in the task details in the card,
-                like task name, description, due date, assignees, etc.
-                4.
-                Moving Cards
-                As the task moves from one stage to another, you can reflect that on the board by dragging and dropping
-                the card from one list to another.
-                5.
-                Deleting Cards
-                Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a card will
-                permanently remove it from the board. Please exercise caution when deleting cards, as this action is
-                irreversible.
-
-                Remember that using Join effectively requires consistent updates from you and your team to ensure the
-                board reflects the current state of your project.
-
-                Have more questions about Join? Feel free to contact us at [Your Contact Email]. We're here to help you!
-
-                Enjoy using Join!
-            </p>
         </main>
     </article>
+
+
 </body>
 
 </html>
