--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -4,10 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Template</title>
+    <title>Contacts</title>
+    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/mainframe.css">
-    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+    <link rel="stylesheet" href="../style/board_style.css">
+    <link rel="stylesheet" href="../style/board_overlay_style.css">
+    <link rel="stylesheet" href="../style/contacts/contacts.css">
+    <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/mainframe_responsive.css">
+    <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
+
+
+
+
 </head>
 
 <body class="body">
@@ -21,15 +32,15 @@
                     <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                     <p>Summary</p>
                 </a>
-                <a href="../html/add_task.html" class="sidebar-nav-section">
+                <a href="/html/add_task.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                     <p>Add Task</p>
                 </a>
-                <a href="../html/board.html" class="sidebar-nav-section">
+                <a href="/html/board.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
-                <a href="../html/contacts.html" class="sidebar-nav-section">
+                <a href="/html/contacts.html" class="sidebar-nav-section active">
                     <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
@@ -37,8 +48,8 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="../html/privacy_policy.html">Privacy Policy</a>
-            <a href="../html/legal_notice.html">Legal notice</a>
+            <a href="../privacyPolicy.html">Privacy Policy</a>
+            <a href="../legalNotice.html">Legal notice</a>
         </footer>
     </aside>
     <article>
@@ -55,10 +66,23 @@
                 </section>
             </nav>
         </header>
-        <main class="main-content">
-            
+        <main class="contact-main">
+            <section id="contactsMainElement" class="contact-display">
+                <h1>Privacy Policy</h1>
+                <article>
+                    <h2>Subtitle</h2>
+                    <p>Text</p>
+                </article>
+                <article>
+                    <h2>Subtitle</h2>
+                    <p>Text</p>
+                </article>
+            </section>
+
         </main>
     </article>
+
+
 </body>
 
 </html>
