--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -4,10 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Template</title>
+    <title>Contacts</title>
+    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/mainframe.css">
-    <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+    <link rel="stylesheet" href="../style/board_style.css">
+    <link rel="stylesheet" href="../style/board_overlay_style.css">
+    <link rel="stylesheet" href="../style/contacts/contacts.css">
+    <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/mainframe_responsive.css">
+    <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
+
+
+
+
 </head>
 
 <body class="body">
@@ -21,15 +32,15 @@
                     <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                     <p>Summary</p>
                 </a>
-                <a href="../html/add_task.html" class="sidebar-nav-section">
+                <a href="/html/add_task.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                     <p>Add Task</p>
                 </a>
-                <a href="../html/board.html" class="sidebar-nav-section">
+                <a href="/html/board.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
-                <a href="../html/contacts.html" class="sidebar-nav-section">
+                <a href="/html/contacts.html" class="sidebar-nav-section active">
                     <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
@@ -37,8 +48,8 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a href="../html/privacy_policy.html">Privacy Policy</a>
-            <a href="../html/legal_notice.html">Legal notice</a>
+            <a href="../privacyPolicy.html">Privacy Policy</a>
+            <a href="../legalNotice.html">Legal notice</a>
         </footer>
     </aside>
     <article>
@@ -55,54 +66,101 @@
                 </section>
             </nav>
         </header>
-        <main class="main-content">
-            <p>Imprint
-                [Student Names List]
-                [Address of the JOIN operator - e.g. one of the students]
-                [Postcode and city]
+        <main class="contact-main">
+            <section id="contactsMainElement" class="contact-display">
+                <h1>Legal Notice</h1>
+                <article>
+                    <h2>Imprint</h2>
+                    <div>
+                        <ul>
+                            <li>
+                                [Student Names List]
+                            </li>
+                            <li>
+                                [Address of the JOIN operator - e.g. one of the students]
+                            </li>
+                            <li>
+                                [Postcode and city]
+                            </li>
+                        </ul>
+                    </div>
+                    <h2>Exploring the Board</h2>
+                    <span>Email: [Email]</span>
+                    <h2>
+                        Acceptance of terms
+                    </h2>
+                    <p>
+                        By accessing and using Join (Product), you acknowledge and agree to the following terms and
+                        conditions, and any policies, guidelines, or amendments thereto that may be presented to you
+                        from time to
+                        time. We, the listed students, may update or change the terms and conditions from time to time
+                        without
+                        notice.
+                    </p>
+                    <h2>
+                        Scope and ownership of the product
+                    </h2>
+                    <p>
+                        Join has been developed as part of a student group project in a web development bootcamp at the
+                        Developer Akademie GmbH. It has an educational purpose and is not intended for extensive
+                        personal & business usage. As such, we cannot guarantee consistent availability, reliability,
+                        accuracy, or any other aspect of quality regarding this Product. <br>
+                        The design of Join is owned by the Developer Akademie GmbH. Unauthorized use, reproduction,
+                        modification, distribution, or replication of the design is strictly prohibited.
+                    </p>
+                    <h2>
+                        Proprietary rights
+                    </h2>
+                    <p>
+                        Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all
+                        proprietary rights in Join, including any associated copyrighted material, trademarks, and other
+                        proprietary
+                        information.
+                    </p>
+                    <h2>
+                        Use of the product
+                    </h2>
+                    <p>
+                        Join is intended to be used for lawful purposes only, in accordance with all applicable laws and
+                        regulations. Any use of Join for illegal activities, or to harass, harm, threaten, or intimidate
+                        another person, is strictly prohibited. You are solely responsible for your interactions with
+                        other
+                        users of Join.
+                    </p>
+                    <h2>
+                        Disclaimer of warranties and limitation of liability
+                    </h2>
+                    <p>
+                        Join is provided "as is" without warranty of any kind, whether express or implied, including but
+                        not limited to the implied warranties of merchantability, fitness for a particular purpose, and
+                        non-infringement. In no event will we, the listed students, or the Developer Akademie, be liable
+                        for any direct, indirect, incidental, special, consequential or exemplary damages, including but
+                        not
+                        limited to, damages for loss of profits, goodwill, use, data, or other intangible losses, even
+                        if we have
+                        been advised of the possibility of such damages, arising out of or in connection with the use or
+                        performance of Join.
+                    </p>
+                    <h2>
+                        Indemnity
+                    </h2>
+                    <p>
+                        You agree to indemnify, defend and hold harmless us, the listed students, the Developer
+                        Akademie, and our affiliates, partners, officers, directors, agents, and employees, from and
+                        against any
+                        claim, demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of
+                        or
+                        relating to your use of Join and/or your breach of this Legal Notice. <br>
+                        For any questions or notices, please contact us at [Contact Email]. <br>
+                        Date: July 26, 2023
+                    </p>
+                </article>
+            </section>
 
-                Exploring the Board
-                Email: [Email]
-                Acceptance of terms
-                By accessing and using Join (Product), you acknowledge and agree to the following terms and conditions,
-                and any policies, guidelines, or amendments thereto that may be presented to you from time to time. We,
-                the listed students, may update or change the terms and conditions from time to time without notice.
-                Scope and ownership of the product
-                Join has been developed as part of a student group project in a web development bootcamp at the
-                Developer Akademie GmbH. It has an educational purpose and is not intended for extensive personal &
-                business usage. As such, we cannot guarantee consistent availability, reliability, accuracy, or any
-                other aspect of quality regarding this Product.
-
-                The design of Join is owned by the Developer Akademie GmbH. Unauthorized use, reproduction,
-                modification, distribution, or replication of the design is strictly prohibited.
-                Proprietary rights
-                Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all proprietary
-                rights in Join, including any associated copyrighted material, trademarks, and other proprietary
-                information.
-                Use of the product
-                Join is intended to be used for lawful purposes only, in accordance with all applicable laws and
-                regulations. Any use of Join for illegal activities, or to harass, harm, threaten, or intimidate another
-                person, is strictly prohibited. You are solely responsible for your interactions with other users of
-                Join.
-                Disclaimer of warranties and limitation of liability
-                Join is provided "as is" without warranty of any kind, whether express or implied, including but not
-                limited to the implied warranties of merchantability, fitness for a particular purpose, and
-                non-infringement. In no event will we, the listed students, or the Developer Akademie, be liable for any
-                direct, indirect, incidental, special, consequential or exemplary damages, including but not limited to,
-                damages for loss of profits, goodwill, use, data, or other intangible losses, even if we have been
-                advised of the possibility of such damages, arising out of or in connection with the use or performance
-                of Join.
-                Indemnity
-                You agree to indemnify, defend and hold harmless us, the listed students, the Developer Akademie, and
-                our affiliates, partners, officers, directors, agents, and employees, from and against any claim,
-                demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of or relating to
-                your use of Join and/or your breach of this Legal Notice.
-
-                For any questions or notices, please contact us at [Contact Email].
-
-                Date: July 26, 2023</p>
         </main>
     </article>
+
+
 </body>
 
 </html>
