--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
+    <title>Privacy Policy</title>
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 
     <link rel="stylesheet" href="../style/standard.css">
