feat: added css and js files and added them to html sites

--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -15,8 +15,9 @@
     <link rel="stylesheet" href="../style/add_task.css">
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
+    <link rel="stylesheet" href="../style/legal_privacy_help.css">
 
-
+    <script src="../scripts/legal_privacy_help.js"></script>
 
 
 </head>
