--- a/html/help.html
+++ b/html/help.html
@@ -15,8 +15,9 @@
     <link rel="stylesheet" href="../style/add_task.css">
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
+    <link rel="stylesheet" href="../style/legal_privacy_help.css">
 
-
+    <script src="../scripts/legal_privacy_help.js"></script>
 
 
 </head>
@@ -72,30 +73,36 @@
                     <h1>Help</h1>
                     <button></button>
                 </div>
-                <p>Welcome to the help page for <a href ="#">Join</a>, your guide to using our kanban project management tool. Here,
-                    we'll provide an overview of what <a href ="#">Join</a> is, how it can benefit you, and how to use it.</p>
+                <p>Welcome to the help page for <a href="#">Join</a>, your guide to using our kanban project management
+                    tool. Here,
+                    we'll provide an overview of what <a href="#">Join</a> is, how it can benefit you, and how to use
+                    it.</p>
                 <h2>
-                    What is <a href ="#">Join</a>?
+                    What is <a href="#">Join</a>?
                 </h2>
-                <p><a href ="#">Join</a> is a kanban-based project management tool designed and built by a group of dedicated students
+                <p><a href="#">Join</a> is a kanban-based project management tool designed and built by a group of
+                    dedicated students
                     as part of their web development bootcamp at the Developer Akademie. <br>
                     Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
-                    work-in-progress, and maximize efficiency (or flow). <a href ="#">Join</a> leverages the principles of kanban to help
+                    work-in-progress, and maximize efficiency (or flow). <a href="#">Join</a> leverages the principles
+                    of kanban to help
                     users manage their tasks and projects in an intuitive, visual interface. <br>
-                    It is important to note that <a href ="#">Join</a> is designed as an educational exercise and is not intended for
+                    It is important to note that <a href="#">Join</a> is designed as an educational exercise and is not
+                    intended for
                     extensive business usage. While we strive to ensure the best possible user experience, we cannot
                     guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding
-                    <a href ="#">Join</a>.
+                    <a href="#">Join</a>.
                 </p>
                 <h2>How to use it</h2>
-                <span>Here is a step-by-step guide on how to use <a href ="#">Join</a>:</span>
+                <span>Here is a step-by-step guide on how to use <a href="#">Join</a>:</span>
                 <ol>
                     <li>
                         <h3>
                             Exploring the Board
                         </h3>
                         <span>
-                            When you log in to <a href ="#">Join</a>, you'll find a default board. This board represents your project and
+                            When you log in to <a href="#">Join</a>, you'll find a default board. This board represents
+                            your project and
                             contains four default lists: "To Do", "In Progress", “Await feedback” and "Done".
                         </span>
                     </li>
@@ -104,7 +111,8 @@
                             Creating Contacts
                         </h3>
                         <span>
-                            In <a href ="#">Join</a>, you can add contacts to collaborate on your projects. Go to the "Contacts" section,
+                            In <a href="#">Join</a>, you can add contacts to collaborate on your projects. Go to the
+                            "Contacts" section,
                             click on "New contact", and fill in the required information. Once added, these contacts can
                             be
                             assigned tasks and they can interact with the tasks on the board.
@@ -141,13 +149,15 @@
                             action is irreversible.
                         </span>
                     </li>
-                    <p> Remember that using <a href ="#">Join</a> effectively requires consistent updates from you and your team to
+                    <p> Remember that using <a href="#">Join</a> effectively requires consistent updates from you and
+                        your team to
                         ensure the board reflects the current state of your project.
-                        Have more questions about <a href ="#">Join</a>? Feel free to contact us at [Your Contact Email]. We're here to help
+                        Have more questions about <a href="#">Join</a>? Feel free to contact us at [Your Contact Email].
+                        We're here to help
                         you!
                     </p>
                 </ol>
-                <h2>Enjoy using <a href ="#">Join</a>!</h2>
+                <h2>Enjoy using <a href="#">Join</a>!</h2>
             </section>
 
         </main>
