feat: added go back function to help back

--- a/html/help.html
+++ b/html/help.html
@@ -71,7 +71,7 @@
             <section id="contactsMainElement" class="contact-display help-content">
                 <div class="help-header">
                     <h1>Help</h1>
-                    <button></button>
+                    <button onclick="redirectBack()"></button>
                 </div>
                 <p>Welcome to the help page for <a href="#">Join</a>, your guide to using our kanban project management
                     tool. Here,
