fix: - improved spelling error in contact.html - removed forgotten comment backslashes
refactor: moved onresize function from html file to js file as an eventlistener

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body onload="fetchContactList()" onresize="removeRespAttributes()" class="body">
+<body onload="fetchContactList()" class="body">
     <aside class="sidebar">
         <div class="sidebar_upper_section">
             <section class="logo-section">
@@ -102,7 +102,7 @@
             </dialog>
             <dialog id="responseDialog" class="dialog-window-message">
                 <div class="dialog-message" id="responseDialogContent">
-                    <div class="white font-size-20" id="responseMessage">Contact succesfully created</div>
+                    <div class="white font-size-20" id="responseMessage">Contact successfully created</div>
                 </div>
             </dialog>
         </main>
