fix: removed active status for contacts
feat: added css code to display button in wide view

--- a/html/help.html
+++ b/html/help.html
@@ -41,11 +41,10 @@
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
-                <a href="/html/contacts.html" class="sidebar-nav-section active">
+                <a href="/html/contacts.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
-
             </nav>
         </div>
         <footer class="sidebar-footer">
@@ -71,7 +70,9 @@
             <section id="contactsMainElement" class="contact-display help-content">
                 <div class="help-header">
                     <h1>Help</h1>
-                    <button onclick="redirectBack()"></button>
+                    <button onclick="redirectBack()" class="go-back-btn display-in-wide"><img src="../assets/icons/contacts/go_back.svg"
+                            alt="go back to source site"></button>
+                    
                 </div>
                 <p>Welcome to the help page for <a href="#">Join</a>, your guide to using our kanban project management
                     tool. Here,
@@ -159,7 +160,6 @@
                 </ol>
                 <h2>Enjoy using Join!</h2>
             </section>
-
         </main>
     </article>
 
