fix: updated link to help page in other html files

--- a/html/board.html
+++ b/html/board.html
@@ -47,8 +47,8 @@
         <header class="header">
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
-                <section class="header-side-buttons" id="current_user_id" data-current-user-id="-OfhU5mv5Jc_R3Ybzq8T">
-                    <a href="#">
+                <section class="header-side-buttons">
+                    <a href="../html/help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <a href="#">
