--- a/html/contacts.html
+++ b/html/contacts.html
@@ -62,7 +62,7 @@
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a href="#">
+                    <a href="../html/help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <a href="#">
