--- a/html/add_task.html
+++ b/html/add_task.html
@@ -66,7 +66,7 @@
                 <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a href="#">
+                    <a href="../html/help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <a href="#">
