--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a href="#">
-                        <img src="./assets/icons/header/help.svg" alt="help icon">
+                    <a href="../html/help.html">
+                        <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
                     <a href="#">
                         <img src="./assets/icons/header/user_placeholder.svg" alt="user icon">
